getとpostで処理を分ける

--- a/resources/form.html
+++ b/resources/form.html
@@ -5,10 +5,10 @@
   <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:8080/posttest/PostTest" method="post" enctype="multipart/form-data">
+<form action="http://localhost:8080/parameters" method="post">
   テキストボックス: <input type="text" name="text_name" /> <br>
   パスワード: <input type="password" name="password_name"/> <br>
-  テキストアリア: <br>
+  テキストエリア: <br>
   <textarea name="text_area_name" cols="40" rows="4"></textarea>
   <table border="1">
     <tr>
